--- a/localization/english/ti_uncategorized_l_english.yml
+++ b/localization/english/ti_uncategorized_l_english.yml
@@ -120,3 +120,108 @@ too_many_japanese:0 "Yayoi Should Not Fight for the Nation"
 too_many_tibetans:0 "Tibetans Should Not Fight for the Nation"
 too_many_austroneseans:0 "Austroneseans Should Not Fight for the Nation"
 too_many_eastern_steppes:0 "The Peoples of the Eastern Steppe Should Not Fight for the Nation"
+
+
+
+
+
+############ TACTICS
+chinese_tactic:0 "Circle Formation"
+chinese_tactic_desc:0 "Part of the Ten Formations used by the Ancient Chinese, the Circle formation was the defensive answer to both Chinese and Nomadic tactics."
+square:0 "Square Formation"
+square_desc:0 "This tacitc is used to represent both the Illyrian Square and that of the Chinese Ten Formations. In Chinese warfare, this  tactic was offensive, while the Illyrians used it as both."
+latin_rights:0 "Grant Latin Rights"
+latin_citizenship:0 "Latin Rights"
+italic_citizenship:0 "Italian Citizenship"
+lex_sempronia_frumentaria_decision: "Pass Lex Sempronia Frumentaria"
+lex_terentia_cassia_decision: "Pass Lex Terentia Cassia"
+lex_clodia_decision: "Pass Lex Clodia"
+revoke_lex_sempronia_frumentaria_decision: "Revoke Lex Sempronia Frumentaria"
+revoke_lex_terentia_cassia_decision: "Revoke Lex Terentia Cassia"
+revoke_lex_clodia_decision: "Revoke Lex Clodia"
+reform_grain_dole: "Enact Lex Iulia Frumentaria"
+halve_grain_dole: "Halve the Grain Dole"
+revoke_grain_dole: "Revoke the Grain Dole"
+lex_papia_decision: "Pass Lex Papia de Peregrinis"
+revoke_lex_papia_decision: "Revoke Lex Papia de Peregrinis"
+lex_canuleia_decision: "Pass Lex Canuleia"
+revoke_lex_canuleia_decision: "Revoke Lex Canuleia"
+lex_hortensia_decision: "Pass Lex Hortensia"
+revoke_lex_hortensia_decision: "Revoke Lex Hortensia"
+latin_citizenship: "Latin Rights"
+latin_rights_extended: "Latin Rights Extended"
+latin_rights_granted: "Latin Rights Granted"
+grain_rights_extended: "Grain Rights Extended"
+grain_rights_revoked: "Grain Rights Revoked"
+grain_dole_halved: "Grain Dole Halved"
+grain_shipments_revoked: "Grain Shipments Revoked"
+lex_sempronia_frumentaria: "Lex Sempronia Frumentaria"
+lex_terentia_cassia: "Lex Terentia Cassia"
+lex_clodia: "Lex Clodia"
+revoke_lex_sempronia_frumentaria: "Lex Sempronia Frumentaria Revoked"
+revoke_lex_terentia_cassia: "Lex Terentia Cassia Revoked"
+revoke_lex_clodia: "Lex Clodia Revoked"
+capital_grain_shipments: "Grain Shipments"
+capital_subsidized_grain: "Subsidized Grain"
+capital_grain_dole: "Grain Dole"
+capital_grain_dole_reform: "Reformed Grain Dole"
+capital_grain_dole_havled: "Grain Dole Halved"
+capital_grain_revoked: "Grain Dole Revoked"
+capital_grain_shipments_revoked: "Grain Shipments Revoked"
+capital_subsidized_grain_revoked: "Subsidized Grain Revoked"
+capital_grain_dole_revoked: "Grain Doe Revoked"
+grain_shipments: "Grain Shipments"
+subsidized_grain: "Subsidized Grain"
+grain_dole: "Grain Dole"
+grain_dole_reform: "Grain Dole Reform"
+grain_dole_halved: "Grain Dole Halved"
+lex_papia: "Lex Papia de Peregrinis"
+challenged_citizenship: "Challenged Citizenship"
+challenged_citizenship_outrage: ""
+capital_challenged_citizenship: "Challenged Citizenship"
+lex_sempronia_frumentaria_decision_desc: ""
+lex_terentia_cassia_decision_desc: ""
+lex_clodia_decision_desc: ""
+revoke_lex_sempronia_frumentaria_decision_desc: ""
+revoke_lex_terentia_cassia_decision_desc: ""
+revoke_lex_clodia_decision_desc: ""
+reform_grain_dole_desc: ""
+halve_grain_dole_desc: ""
+revoke_grain_dole_desc: ""
+lex_papia_decision_desc: "This law set out to challenge false claims of citizenship, with the ultimate aim of deporting foreigners from Rome. Archias, the mentor of Cicero, was famously tried under this law, an act which caused Cicero to write his work, 'Pro Archia Poeta', in Archias' defense."
+revoke_lex_papia_decision_desc: ""
+lex_canuleia_decision_desc: ""
+revoke_lex_canuleia_decision_desc: ""
+lex_hortensia_decision_desc: ""
+revoke_lex_hortensia_decision_desc: ""
+latin_citizenship_desc: ""
+latin_rights_extended_desc: ""
+latin_rights_granted_desc: ""
+grain_rights_extended_desc: ""
+grain_rights_revoked_desc: ""
+grain_dole_halved_desc: ""
+grain_shipments_revoked_desc: ""
+lex_sempronia_frumentaria_desc: ""
+lex_terentia_cassia_desc: ""
+lex_clodia_desc: ""
+revoke_lex_sempronia_frumentaria_desc: ""
+revoke_lex_terentia_cassia_desc: ""
+revoke_lex_clodia_desc: ""
+capital_grain_shipments_desc: ""
+capital_subsidized_grain_desc: ""
+capital_grain_dole_desc: ""
+capital_grain_dole_reform_desc: ""
+capital_grain_dole_havled_desc: ""
+capital_grain_revoked_desc: ""
+capital_grain_shipments_revoked_desc: ""
+capital_subsidized_grain_revoked_desc: ""
+capital_grain_dole_revoked_desc: ""
+grain_shipments_desc: ""
+subsidized_grain_desc: ""
+grain_dole_desc: ""
+grain_dole_reform_desc: ""
+grain_dole_halved_desc: ""
+lex_papia_desc: ""
+challenged_citizenship_desc: ""
+challenged_citizenship_outrage_desc: ""
+capital_challenged_citizenship_desc: ""
