--- a/localization/english/military_traditions_l_english.yml
+++ b/localization/english/military_traditions_l_english.yml
@@ -60,7 +60,7 @@
  ######
  ###GREEK
  ######
- greek_philosophy:1 "Greek Poleis Traditions"
+ greek_philosophy:1 "Hellenic Traditions"
  greek_philosophydesc:3 "The Greek Traditions center on the Hellenic cornerstone of heavily armored spear-men in the defensive phalanx formation, used since time immemorial and further developed by the Macedonians with the sarissa, an extended spear or pike. Greek tactics center on this formation pinning enemy infantry while cavalry and light infantry maneuver around their flanks.\n\nCan unlock '#Y Octere#!' and '#Y Mega-Polyreme#!' Ships\nCan unlock the '#Y Cavalry Skirmish#!' Tactic\nCan unlock the '#Y Military Colonies#!' Ability\nCan unlock the '#Y Slave Raid#!' Ability\n\n#G Tradition Focuses#!\nStrong #Y Heavy Infantry#!\nGood #Y Cavalry#!, #Y Triremes#!"
  greek_philosophy_start_bonus:0 "Modernized Phalanx"
  greek_philosophy_start_bonus_desc:0 "Whilst partially responsible for the success of Alexander against the hosts of Darius the Third, the phalanx originally evolved out of the need for a highly defensive, armored formation, used by Greek city-states making war upon one another."
@@ -173,6 +173,11 @@
  latin_roman_path_7_desc:0 "As Rome grew in stature, military service became a matter of honor for young Roman men. Indeed, even after defeats as humiliating as the Battle of Cannae, in which up to 80,000 of Rome's soldiers were reportedly killed, the efforts of the senate were able to raise enough soldiers to take the places of the fallen."
  latin_roman_path_2:0 "Triplex Acies"
  latin_roman_path_2_desc:0 "The triple battle line was a manipular formation, primarily utilizing the Principes, Triarii and Hastati, with the Velites in freeform support. This highly flexible formation relied on the absolute discipline of each soldier, who had to know his place amidst the chaos of battle. In extreme circumstances, the Triplex was said to have reached over a mile long."
+ latin_roman_path_colonia: "Colonia"
+ latin_roman_path_colonia_desc: "Colonia"
+ latin_roman_path_triumph: "Triumph"
+ latin_roman_path_triumph_desc: "Triumph"
+
  ######
  #####Egyptian and Arabian Traditions
  ######
@@ -522,7 +527,7 @@
  celt_iberian_path_c_3B_desc:0 "An Iberian and his horse are seldom parted. The upper classes have the right and the duty to become proud horsemen."
 
  # New Illyrian Military Traditions
- haemic_philosophy:0 "Illyrian Traditions"
+ haemic_philosophy:0 "Haemic Traditions"
  haemic_philosophy_desc:0 "King Haemus of Thrace was vain and haughty and compared himself and his wife, Queen Rhodope, to Zeus and Hera. As punishment, the gods changed him and his wife into mountains. The Illyrians and Dacians mostly relied on large formations of lightly armored infantry equipped primarily with swords, supported by light cavalry when available. They made extensive use of the mountainous terrain for defense while the Illyrians engaged in piracy in the Adriatic.\n\nCan unlock the '#Y Raid City#!'  Tradition Focuses#!\nStrong #Y Light Infantry#!\nGood #Y Archers#!, #Y Light Cavalry#!"
  haemic_philosophy_2:0 "Daco-Thracian Traditions"
  haemic_philosophy_2_desc:0 "King Haemus of Thrace was vain and haughty and compared himself and his wife, Queen Rhodope, to Zeus and Hera. As punishment, the gods changed him and his wife into mountains. The Illyrians and Dacians mostly relied on large formations of lightly armored infantry equipped primarily with swords, supported by light cavalry when available. They made extensive use of the mountainous terrain for defense while the Illyrians engaged in piracy in the Adriatic.\n\nCan unlock the '#Y Raid City#!'  Tradition Focuses#!\nStrong #Y Light Infantry#!\nGood #Y Archers#!, #Y Light Cavalry#!"
@@ -650,9 +655,9 @@
  arabian_path_15_desc:0 "Swiftly and lightly we gallop across the landscape."
 
  ###New Anatolian Traditions###
- anatolian_philosophy:0 "Anatolian Military Traditions"
+ anatolian_philosophy:0 "Anatolian Traditions"
  anatolian_philosophy_desc:0 "Describe"
- anatolian_philosophy_2:0 "Armeno-Pontic Military Traditions"
+ anatolian_philosophy_2:0 "Caucasian Traditions"
  anatolian_philosophy_2_desc:0 "Describe"
 
  #Lydo-Cilician Tree
@@ -718,9 +723,9 @@
  armenian_path_15_desc:0 "Mithridates of Pontus managed what few achieved in that time. He erected a Kingdom away from the Diadochi and managed to keep his realm together."
 
  ###New Steppe Traditions###
- steppe_philosophy:0 "Scythian Military Traditions"
+ steppe_philosophy:0 "Scythian Traditions"
  steppe_philosophy_desc:0 "."
- steppe_philosophy_2:0 "Bactrian Military Traditions"
+ steppe_philosophy_2:0 "Bactrian Traditions"
  steppe_philosophy_2_desc:0 "."
 
  #Scythian Traditions
@@ -788,7 +793,7 @@
  bactrian_path_15_desc:0 "The Silk Road began to be established by the Diadochi, Alexander's successors. In the following centuries, it began to take on a more and more recognizable shape."
 
  ###Germanic Traditions###
- germanic_philosophy:0 "Germanic Military Traditions"
+ germanic_philosophy:0 "Germanic Traditions"
  germanic_philosophy_desc:0 "Describe"
  germanic_philosophy_2:0 "Baltic Military Traditions"
  germanic_philosophy_2_desc:0 "Describe"
@@ -855,10 +860,10 @@
 
  # Unlock Military Tradition Requirements
  tradition_unlock_requirement_nubian:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('meroitic_group').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('aksumite_group').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('nilotic_group').GetName|Y] Culture Group"
- tradition_unlock_requirement_arabian:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('south_levantie')n.GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('south_arabian').GetName|Y] Culture Group"
- tradition_unlock_requirement_anatolian:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('anatolian').GetName|Y] Culture Group"
- tradition_unlock_requirement_caucasian:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('caucasian').GetName|Y] Culture Group"
- tradition_unlock_requirement_celtic:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('gallic').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('celto_pannonian_group').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('belgae_group').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('britannic').GetName|Y] Culture Group"
+ tradition_unlock_requirement_arabian:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('south_levantine').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('south_arabian').GetName|Y] Culture Group"
+ tradition_unlock_requirement_anatolian:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('anatolian').GetName|Y] Culture Group\n NOT ARMENIAN"
+ tradition_unlock_requirement_caucasian:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('caucasian').GetName|Y] Culture Group\n @trigger_no! [GetCulture('armenian').GetName|Y] Culture"
+ tradition_unlock_requirement_celtic:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('gallic').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('celto_pannonian_group').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('belgae_group').GetName|Y] Culture Group"
  tradition_unlock_requirement_germanic:0 "$tradition_unlock_requirement_base$\n   @trigger_no![GetCultureGroup('germanic').GetName|Y] Culture Group\n    @trigger_no![GetCultureGroup('baltic').GetName|Y] Culture Group"
  tradition_unlock_requirement_greek:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('hellenic').GetName|Y] Culture Group"
  tradition_unlock_requirement_haemic:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('illyrian_group').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('dacia_group').GetName|Y] Culture Group\n    @trigger_no![GetCultureGroup('thrace_group').GetName|Y] Culture Group"
@@ -866,11 +871,14 @@
  tradition_unlock_requirement_latin:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('latin').GetName|Y] Culture Group"
  tradition_unlock_requirement_levantine:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('west_levantine').GetName|Y] Culture Group\n     Not [GetCulture('carthaginian').GetName|Y] Culture\n   @trigger_no! [GetCultureGroup('north_african').GetName|Y] Culture Group"
  tradition_unlock_requirement_mauryan:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('aryan').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('tibetan').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('indian').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('pracyan').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('pu').GetName|Y] Culture Group"
- tradition_unlock_requirement_north_african:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('numidian').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('fezzani').GetName|Y] Culture Group\n   @trigger_no! [GetCulture('carthaginian').GetName|Y] Culture"
- tradition_unlock_requirement_persian:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('persia').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('east_levantine').GetName|Y] Culture Group"
- tradition_unlock_requirement_steppe:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('scythia').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('bactrian').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('scythian_east').GetName|Y] Culture Group"
-
-
+ tradition_unlock_requirement_north_african:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('numidian').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('fezzani').GetName|Y] Culture Group"
+ tradition_unlock_requirement_iran:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('persia').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('east_levantine').GetName|Y] Culture Group\n  @trigger_no! [GetCultureGroup('scythia').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('bactrian').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('scythian_east').GetName|Y] Culture Group"
+ tradition_unlock_requirement_steppe:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('scythia').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('bactrian').GetName|Y] Culture Group\n   @trigger_no! [GetCultureGroup('saka_g').GetName|Y] Culture Group"
+ tradition_unlock_requirement_bactrian:0 "$tradition_unlock_requirement_base$\n  @trigger_no! [GetCultureGroup('bactrian').GetName|Y] Culture Group"
+ tradition_unlock_requirement_roman:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCulture('roman').GetName|Y] Culture"
+ tradition_unlock_requirement_punic:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCulture('carthaginian').GetName|Y] Culture"
+ tradition_unlock_requirement_etruscan:0 "$tradition_unlock_requirement_base$\n   @trigger_no! [GetCultureGroup('latin').GetName|Y] Culture Group\n   NOT ROMAN"
+ tradition_unlock_requirement_britannic:0 "$tradition_unlock_requirement_base$\n    @trigger_no! [GetCultureGroup('britannic').GetName|Y] Culture Group"
  tradition_unlock_requirement_cultural_decision:0 "We have studied their ways of war using the Cultural Decision with the following requirements:"
 
 #Invention unlock requirements
