--- a/localization/english/ti_uncategorized_l_english.yml
+++ b/localization/english/ti_uncategorized_l_english.yml
@@ -128,8 +128,8 @@ too_many_eastern_steppes:0 "The Peoples of the Eastern Steppe Should Not Fight f
 ############ TACTICS
 chinese_tactic:0 "Circle Formation"
 chinese_tactic_desc:0 "Part of the Ten Formations used by the Ancient Chinese, the Circle formation was the defensive answer to both Chinese and Nomadic tactics."
-square:0 "Square Formation"
-square_desc:0 "This tacitc is used to represent both the Illyrian Square and that of the Chinese Ten Formations. In Chinese warfare, this  tactic was offensive, while the Illyrians used it as both."
+square_tactic:0 "Square Formation"
+square_tactic_desc:0 "This tacitc is used to represent both the Illyrian Square and that of the Chinese Ten Formations. In Chinese warfare, this  tactic was offensive, while the Illyrians used it as both."
 latin_rights:0 "Grant Latin Rights"
 latin_citizenship:0 "Latin Rights"
 italic_citizenship:0 "Italian Citizenship"
@@ -225,3 +225,12 @@ lex_papia_desc: ""
 challenged_citizenship_desc: ""
 challenged_citizenship_outrage_desc: ""
 capital_challenged_citizenship_desc: ""
+
+
+
+
+
+show_of_strength: "Show of Strength"
+military_parade: "Military Parade"
+sack_city: "Sack City"
+public_works: "Public Works Project"
