hotfix for cultural unlock

--- a/localization/english/military_traditions_l_english.yml
+++ b/localization/english/military_traditions_l_english.yml
@@ -997,7 +997,7 @@ punic_path_1_desc: "Integration of those of not full blooded status may be the m
 punic_path_2: "Balearic Slingers"
 punic_path_2_desc: "These Carthaginian subjects were infamous slingers."
 punic_path_3: "Sacred Band Cavalry"
-punic_path_3_desc: "When Xanthippus was hired to reform our army,he noticed there was nothing wrong with our cavalry, just that it was best used in the plains."
+punic_path_3_desc: "When Xanthippus was hired to reform our army, he noticed there was nothing wrong with our cavalry, just that it was best used in the plains."
 numidian_ambush: "Ambush"
 numidian_ambush_desc: "Lightning Strike"
 numidian_call: "Call to Arms"
@@ -1027,6 +1027,12 @@ nubian_path_egyptian: "Egyptian Influence"
 nubian_path_egyptian_2: "Embrace Kemetic Pantheon"
 nubian_path_egyptian_3: "Descendents of Pharaohs"
 
+mauryan_path_chandragupta: "Legacy of Chandragupta Maurya"
+mauryan_path_ashoka: "Legacy of Ashoka"
+indian_ambush: "Jungle Ambush"
+mauryan_path_chandragupta_desc: "It is impossible to know whether Alexander would have beaten this great founder of the Indian Golden Age, but Seleukos sure couldn't."
+mauryan_path_ashoka_desc: "The last great Mauryan ruler, his edicts, reforms, and policies shaped his time and his kingdom so expansively that his echoes remain to this day."
+indian_ambush_desc: "Mastery of the jungle can prove useful in guerilla warfare"
 
 
 
