--- a/localization/english/ti_uncategorized_l_english.yml
+++ b/localization/english/ti_uncategorized_l_english.yml
@@ -234,3 +234,4 @@ show_of_strength: "Show of Strength"
 military_parade: "Military Parade"
 sack_city: "Sack City"
 public_works: "Public Works Project"
+build_siege_engines: "Settle in for a Siege"
